opam-version: "2.0"
version: "0.2~dev"
maintainer: "Gaspard Dousson <gaspard@sweetsound.fr>"
authors: [
  "Colin Aubonnet"
  "Yann-Sully Chesnel--Bicep"
  "Gaspard Dousson"
  "Arthur Renout"
]
license: "GPLv3"
homepage: "https://github.com/gaspardousson/braid"
bug-reports: "https://github.com/gaspardousson/braid/issues"
dev-repo: "git+https://github.com/gaspardousson/braid"
build: [
  [make]
  [make "test"] {with-test}
]
install: [
  make
  "install" {!ocaml:preinstalled}
  "findlib-install" {ocaml:preinstalled}
]
depends: [
  "ocaml" {>= "4.0.0"}
  "ocamlfind" {build & >= "1.7.3"}
]
synopsis:
  "OCaml module implementing an algorithm to solve word problem in the braid group."